Correction de CSS sur multiple fichiers (boutons, alignements, bordures)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,6 +65,8 @@ body.dark-mode {
 .button {
     padding: 5px 10px;
     font-size: 1rem;
+    border: 2px solid rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
 
 .button-mini {
@@ -168,6 +170,11 @@ nav {
     border-radius: 5px;
     background-color: var(--section-dark);
     box-shadow: 2px 2px 10px var(--section-dark);
+}
+
+.per_page {
+    min-width: auto;
+    max-width: 50px;
 }
 
 .page-hover {
